# rasterizer

./: .gitignore  CMakeLists.txt  README.md
rasterizer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  rasterizer.cpp  window.cpp  window.h
